@@ -97,101 +97,103 @@
 
 #ifndef ASM_FILE
 
-#include <grub/types.h>
+typedef unsigned short		multiboot_uint16_t;
+typedef unsigned int		multiboot_uint32_t;
+typedef unsigned long long	multiboot_uint64_t;
 
 struct multiboot_header
 {
   /* Must be MULTIBOOT_MAGIC - see above.  */
-  grub_uint32_t magic;
+  multiboot_uint32_t magic;
 
   /* Feature flags.  */
-  grub_uint32_t flags;
+  multiboot_uint32_t flags;
 
   /* The above fields plus this one must equal 0 mod 2^32. */
-  grub_uint32_t checksum;
+  multiboot_uint32_t checksum;
 
   /* These are only valid if MULTIBOOT_AOUT_KLUDGE is set.  */
-  grub_uint32_t header_addr;
-  grub_uint32_t load_addr;
-  grub_uint32_t load_end_addr;
-  grub_uint32_t bss_end_addr;
-  grub_uint32_t entry_addr;
+  multiboot_uint32_t header_addr;
+  multiboot_uint32_t load_addr;
+  multiboot_uint32_t load_end_addr;
+  multiboot_uint32_t bss_end_addr;
+  multiboot_uint32_t entry_addr;
 
   /* These are only valid if MULTIBOOT_VIDEO_MODE is set.  */
-  grub_uint32_t mode_type;
-  grub_uint32_t width;
-  grub_uint32_t height;
-  grub_uint32_t depth;
+  multiboot_uint32_t mode_type;
+  multiboot_uint32_t width;
+  multiboot_uint32_t height;
+  multiboot_uint32_t depth;
 };
 
 struct multiboot_info
 {
   /* Multiboot info version number */
-  grub_uint32_t flags;
+  multiboot_uint32_t flags;
 
   /* Available memory from BIOS */
-  grub_uint32_t mem_lower;
-  grub_uint32_t mem_upper;
+  multiboot_uint32_t mem_lower;
+  multiboot_uint32_t mem_upper;
 
   /* "root" partition */
-  grub_uint32_t boot_device;
+  multiboot_uint32_t boot_device;
 
   /* Kernel command line */
-  grub_uint32_t cmdline;
+  multiboot_uint32_t cmdline;
 
   /* Boot-Module list */
-  grub_uint32_t mods_count;
-  grub_uint32_t mods_addr;
+  multiboot_uint32_t mods_count;
+  multiboot_uint32_t mods_addr;
 
-  grub_uint32_t syms[4];
+  multiboot_uint32_t syms[4];
 
   /* Memory Mapping buffer */
-  grub_uint32_t mmap_length;
-  grub_uint32_t mmap_addr;
+  multiboot_uint32_t mmap_length;
+  multiboot_uint32_t mmap_addr;
 
   /* Drive Info buffer */
-  grub_uint32_t drives_length;
-  grub_uint32_t drives_addr;
+  multiboot_uint32_t drives_length;
+  multiboot_uint32_t drives_addr;
 
   /* ROM configuration table */
-  grub_uint32_t config_table;
+  multiboot_uint32_t config_table;
 
   /* Boot Loader Name */
-  grub_uint32_t boot_loader_name;
+  multiboot_uint32_t boot_loader_name;
 
   /* APM table */
-  grub_uint32_t apm_table;
+  multiboot_uint32_t apm_table;
 
   /* Video */
-  grub_uint32_t vbe_control_info;
-  grub_uint32_t vbe_mode_info;
-  grub_uint16_t vbe_mode;
-  grub_uint16_t vbe_interface_seg;
-  grub_uint16_t vbe_interface_off;
-  grub_uint16_t vbe_interface_len;
+  multiboot_uint32_t vbe_control_info;
+  multiboot_uint32_t vbe_mode_info;
+  multiboot_uint16_t vbe_mode;
+  multiboot_uint16_t vbe_interface_seg;
+  multiboot_uint16_t vbe_interface_off;
+  multiboot_uint16_t vbe_interface_len;
 };
 
 struct multiboot_mmap_entry
 {
-  grub_uint32_t size;
-  grub_uint64_t addr;
-  grub_uint64_t len;
+  multiboot_uint32_t size;
+  multiboot_uint64_t addr;
+  multiboot_uint64_t len;
 #define MULTIBOOT_MEMORY_AVAILABLE		1
 #define MULTIBOOT_MEMORY_RESERVED		2
-  grub_uint32_t type;
+  multiboot_uint32_t type;
 } __attribute__((packed));
 
 struct multiboot_mod_list
 {
   /* the memory used goes from bytes 'mod_start' to 'mod_end-1' inclusive */
-  grub_uint32_t mod_start;
-  grub_uint32_t mod_end;
+  multiboot_uint32_t mod_start;
+  multiboot_uint32_t mod_end;
 
   /* Module command line */
-  grub_uint32_t cmdline;
+  multiboot_uint32_t cmdline;
 
   /* padding to take it to 16 bytes (must be zero) */
-  grub_uint32_t pad;
+  multiboot_uint32_t pad;
 };
 
 #endif /* ! ASM_FILE */
